RESOLVED FIXED 30971
Don't add '/' to the URL path if the it does not include '/' after the protocol component
https://bugs.webkit.org/show_bug.cgi?id=30971
Summary Don't add '/' to the URL path if the it does not include '/' after the protoc...
Yael
Reported 2009-10-30 17:53:42 PDT
Matching IE8 behaviour which does not automatically add '/' for the path component, if the URL does not already include '/' after the scheme.
Attachments
Patch (2.42 KB, patch)
2009-10-31 05:08 PDT, Yael
no flags
Yael
Comment 1 2009-10-31 05:08:35 PDT
WebKit Commit Bot
Comment 2 2009-11-01 13:39:03 PST
Comment on attachment 42251 [details] Patch Clearing flags on attachment: 42251 Committed r50395: <http://trac.webkit.org/changeset/50395>
WebKit Commit Bot
Comment 3 2009-11-01 13:39:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.