2009-11-01  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Darin Adler.

        Don't add '/' to the URL path if the it does not include '/' after the protocol component
        https://bugs.webkit.org/show_bug.cgi?id=30971

        Updating the expected result to reflect the change.

        * fast/loader/url-parse-1-expected.txt:
2009-11-01  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        Don't add '/' to the URL path if the it does not include '/' after the protocol component
        https://bugs.webkit.org/show_bug.cgi?id=30971

        Match IE8 behaviour, that does not add '/' if there is none after the protocol component.

        * platform/KURL.cpp:
        (WebCore::KURL::parse):

Canonical link: https://commits.webkit.org/41828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50395 268f45cc-cd09-0410-ab3c-d52691b4dbfc